--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Culture -- Periodicals'
 - !lcsh 'Civilization -- Periodicals'
+- GITenberg
 title: Harper's New Monthly Magazine, Vol. V, No. XXV, June, 1852
 url: http://www.gutenberg.org/ebooks/45764
